--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OpenBLAS"]
 	path = OpenBLAS
-	url = git@github.com:OpenMathLib/OpenBLAS.git
+	url = https://github.com/OpenMathLib/OpenBLAS.git
